--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<heading> HELLO WORLD! </heading>
+<heading> HELLO WORLD!
+          I am S.SUDHARSAN
+</heading>
+<body>
+  I am a beginner in web development.
+  I started to learn about github and git.
+  This is my first webpage and I will be updating this as I progress.
+</body>
