--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-<heading> HELLO WORLD!
-          I am S.SUDHARSAN
-</heading>
+<heading> HELLO WORLD!         I am S.SUDHARSAN </heading>
+<br>
 <body>
-  I am a beginner in web development.
-  I started to learn about github and git.
-  This is my first webpage and I will be updating this as I progress.
+  I am a beginner in web development.<br>
+  I started to learn about github and git.<br>
+  This is my first webpage and I will be updating this as I progress.<br>
 </body>
